# omnibot

./: README.md  pyproject.toml
.db/index/: id_to_uuid_d5ac89c4-fb67-4ebe-8afb-e0d72a86d86f.pkl  index_metadata_d5ac89c4-fb67-4ebe-8afb-e0d72a86d86f.pkl  uuid_to_id_d5ac89c4-fb67-4ebe-8afb-e0d72a86d86f.pkl
data/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+116 more)
data-raw/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+116 more)
db/: chroma-collections.parquet  chroma-embeddings.parquet
db/index/: id_to_uuid_c91ac1fb-79bc-4932-9c9f-40af0e24cf90.pkl  id_to_uuid_d5ac89c4-fb67-4ebe-8afb-e0d72a86d86f.pkl  index_metadata_c91ac1fb-79bc-4932-9c9f-40af0e24cf90.pkl  index_metadata_d5ac89c4-fb67-4ebe-8afb-e0d72a86d86f.pkl  uuid_to_id_c91ac1fb-79bc-4932-9c9f-40af0e24cf90.pkl  (+1 more)
notebooks/: 0 - Playground.ipynb  1 - Data Collection.ipynb  2 - Generate Embeddings.ipynb  3 - OmniBot.ipynb  4 - Codebase.ipynb
src/: app.py  app_working.py  demo_chat.py  playground.py  simple_chat_ui.py
